Closed Bug 26221 Opened 25 years ago Closed 25 years ago

Form drop-down & box on right-side of screen (zdnet.com)

Categories

(Core :: DOM: Core & HTML, defect, P1)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: michael_bourgon, Assigned: troy)

References

()

Details

(Whiteboard: ckritzer)

Attachments

(3 files)

Using m13 on NT4 sp5, if I go to the URL, there are two problems with the form 1) The Comment box is on the extreme right side, about 10 lines underneath where it should be. There's a space for it where it should be, but where it actually is only shows about 4 characters worth of the box. 2) There's a drop-down box for "Please tell us which story your comment is about from the list below". When I click on it, the box appears on the extreme right, cut off by the edge of the screen (like the comment box on item 1). You can see the first 4-5 characters, but that's it. Hope this helps. You guys are doing a great job!
I'm getting the following serious assertion (trying to a frame as its sibling). Reassigning to Kipp's bug list. nsDebug::Assertion(const char * 0x02143c30, const char * 0x02143c18, const char * 0x02143bec, int 1647) line 189 + 13 bytes nsFrame::SetNextSibling(nsFrame * const 0x0113a030, nsIFrame * 0x0113a030) line 1647 + 34 bytes nsBlockFrame::BuildFloaterList() line 6471 nsBlockFrame::Reflow(nsBlockFrame * const 0x01139e94, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 1549 nsContainerFrame::ReflowChild(nsIFrame * 0x01139e94, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 0, unsigned int & 0) line 637 + 31 bytes nsTableCellFrame::Reflow(nsTableCellFrame * const 0x01139e38, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 688 nsContainerFrame::ReflowChild(nsIFrame * 0x01139e38, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 0, unsigned int & 0) line 637 + 31 bytes nsTableRowFrame::InitialReflow(nsTableRowFrame * const 0x01139df0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, RowReflowState & {...}, unsigned int & 0, nsTableCellFrame * 0x00000000, int 1) line 983 + 44 bytes nsTableRowFrame::Reflow(nsTableRowFrame * const 0x01139df0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 1352 + 35 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x01139df0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 0, unsigned int & 0) line 637 + 31 bytes nsTableRowGroupFrame::ReflowMappedChildren(nsTableRowGroupFrame * const 0x01139db0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, RowGroupReflowState & {...}, unsigned int & 0, nsTableRowFrame * 0x00000000, nsReflowReason eReflowReason_Initial, int 1, int 0) line 437 + 45 bytes nsTableRowGroupFrame::Reflow(nsTableRowGroupFrame * const 0x01139db0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 1090 + 38 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x01139db0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 0, unsigned int & 0) line 637 + 31 bytes nsTableFrame::ResizeReflowPass1(nsTableFrame * const 0x01139ce4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0, nsTableRowGroupFrame * 0x00000000, nsReflowReason eReflowReason_Initial, int 1) line 1714 nsTableFrame::Reflow(nsTableFrame * const 0x01139ce4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 1541 + 42 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x01139ce4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 0, unsigned int & 0) line 637 + 31 bytes nsTableOuterFrame::Reflow(nsTableOuterFrame * const 0x01139c90, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 1013 + 43 bytes nsBlockReflowContext::ReflowBlock(nsIFrame * 0x01139c90, const nsRect & {x=0 y=0 width=6765 height=1073741824}, int 1, int 0, int 0, nsMargin & {top=0 right=0 bottom=0 left=0}, unsigned int & 0) line 425 + 45 bytes nsBlockFrame::ReflowFloater(nsBlockReflowState & {...}, nsPlaceholderFrame * 0x0118d634, nsRect & {x=0 y=0 width=0 height=0}, nsMargin & {top=0 right=0 bottom=0 left=0}, nsMargin & {top=0 right=0 bottom=0 left=0}) line 5096 + 44 bytes nsBlockReflowState::AddFloater(nsLineLayout & {...}, nsPlaceholderFrame * 0x0118d634, int 0) line 5188 nsLineLayout::AddFloater(nsPlaceholderFrame * 0x0118d634) line 562 nsLineLayout::ReflowFrame(nsIFrame * 0x0118d634, nsIFrame * * 0x0011e4ac, unsigned int & 0, nsHTMLReflowMetrics * 0x00000000, int & 0) line 995 nsInlineFrame::ReflowInlineFrame(nsIPresContext * 0x0231cc10, const nsHTMLReflowState & {...}, nsInlineFrame::InlineReflowState & {...}, nsIFrame * 0x0118d634, unsigned int & 0) line 500 + 26 bytes nsInlineFrame::ReflowFrames(nsIPresContext * 0x0231cc10, const nsHTMLReflowState & {...}, nsInlineFrame::InlineReflowState & {...}, nsHTMLReflowMetrics & {...}, unsigned int & 0) line 356 + 28 bytes nsInlineFrame::Reflow(nsInlineFrame * const 0x01139be0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 259 + 28 bytes nsLineLayout::ReflowFrame(nsIFrame * 0x01139be0, nsIFrame * * 0x0011e6fc, unsigned int & 0, nsHTMLReflowMetrics * 0x00000000, int & 0) line 978 nsInlineFrame::ReflowInlineFrame(nsIPresContext * 0x0231cc10, const nsHTMLReflowState & {...}, nsInlineFrame::InlineReflowState & {...}, nsIFrame * 0x01139be0, unsigned int & 0) line 500 + 26 bytes nsInlineFrame::ReflowFrames(nsIPresContext * 0x0231cc10, const nsHTMLReflowState & {...}, nsInlineFrame::InlineReflowState & {...}, nsHTMLReflowMetrics & {...}, unsigned int & 0) line 356 + 28 bytes nsInlineFrame::Reflow(nsInlineFrame * const 0x0115376c, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 259 + 28 bytes nsLineLayout::ReflowFrame(nsIFrame * 0x0115376c, nsIFrame * * 0x0011f488, unsigned int & 0, nsHTMLReflowMetrics * 0x00000000, int & 0) line 978 nsBlockFrame::ReflowInlineFrame(nsBlockReflowState & {...}, nsLineLayout & {...}, nsLineBox * 0x02311d80, nsIFrame * 0x0115376c, unsigned char * 0x0011e8f4) line 3882 + 31 bytes nsBlockFrame::DoReflowInlineFrames(nsBlockReflowState & {...}, nsLineLayout & {...}, nsLineBox * 0x02311d80, int * 0x0011f18c, unsigned char * 0x0011f00c, int 0) line 3771 + 28 bytes nsBlockFrame::DoReflowInlineFramesAuto(nsBlockReflowState & {...}, nsLineBox * 0x02311d80, int * 0x0011f18c, unsigned char * 0x0011f00c, int 0) line 3713 + 38 bytes nsBlockFrame::ReflowInlineFrames(nsBlockReflowState & {...}, nsLineBox * 0x02311d80, int * 0x0011f18c, int 0) line 3658 + 28 bytes nsBlockFrame::ReflowLine(nsBlockReflowState & {...}, nsLineBox * 0x02311d80, int * 0x0011f18c, int 1) line 2831 + 25 bytes nsBlockFrame::ReflowDirtyLines(nsBlockReflowState & {...}) line 2557 + 27 bytes nsBlockFrame::Reflow(nsBlockFrame * const 0x0111712c, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 1532 + 15 bytes nsBlockReflowContext::ReflowBlock(nsIFrame * 0x0111712c, const nsRect & {x=0 y=0 width=8955 height=1073741824}, int 1, int 0, int 1, nsMargin & {top=0 right=0 bottom=0 left=0}, unsigned int & 0) line 425 + 45 bytes nsBlockFrame::ReflowBlockFrame(nsBlockReflowState & {...}, nsLineBox * 0x02311d20, int * 0x0011faa4) line 3416 + 59 bytes nsBlockFrame::ReflowLine(nsBlockReflowState & {...}, nsLineBox * 0x02311d20, int * 0x0011faa4, int 1) line 2746 + 23 bytes nsBlockFrame::ReflowDirtyLines(nsBlockReflowState & {...}) line 2557 + 27 bytes nsBlockFrame::Reflow(nsBlockFrame * const 0x011170a4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 1532 + 15 bytes nsAreaFrame::Reflow(nsAreaFrame * const 0x011170a4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 272 + 25 bytes nsContainerFrame::ReflowChild(nsIFrame * 0x011170a4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 0, unsigned int & 0) line 637 + 31 bytes RootFrame::Reflow(RootFrame * const 0x0111663c, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 331 nsContainerFrame::ReflowChild(nsIFrame * 0x0111663c, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 1, unsigned int & 0) line 637 + 31 bytes nsScrollPortFrame::Reflow(nsScrollPortFrame * const 0x011166c4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 404 nsContainerFrame::ReflowChild(nsIFrame * 0x011166c4, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 3, unsigned int & 0) line 637 + 31 bytes nsGfxScrollFrameInner::ReflowFrame(nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0, nsIFrame * 0x011166c4, const nsSize & {width=8955 height=4245}, const nsSize & {width=8955 height=4245}, int & 0, nsIFrame * & 0x00000000) line 1254 nsGfxScrollFrameInner::ReflowScrollArea(nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0, int & 0, int & 0, int & 1, nsIFrame * & 0x00000000) line 1322 nsGfxScrollFrame::Reflow(nsGfxScrollFrame * const 0x01116678, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 509 nsContainerFrame::ReflowChild(nsIFrame * 0x01116678, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0, int 0, unsigned int 0, unsigned int & 0) line 637 + 31 bytes ViewportFrame::Reflow(ViewportFrame * const 0x01116600, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 531 nsHTMLReflowCommand::Dispatch(nsHTMLReflowCommand * const 0x029b7800, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsSize & {width=9180 height=4470}, nsIRenderingContext & {...}) line 145 PresShell::ProcessReflowCommands(PresShell * const 0x0227be70, int 0) line 1932 PresShell::FlushPendingNotifications(PresShell * const 0x0227be70) line 2391 nsDocument::FlushPendingNotifications(nsDocument * const 0x0231a610) line 2990 nsHTMLDocument::FlushPendingNotifications(nsHTMLDocument * const 0x0231a610) line 1187 + 9 bytes nsGenericHTMLElement::GetPrimaryFrame(nsIHTMLContent * 0x028ccc80, nsIFormControlFrame * & 0x00000000) line 1600 nsHTMLInputElement::GetValue(nsHTMLInputElement * const 0x028ccc70, nsString & {""}) line 416 + 46 bytes nsFormControlHelper::GetInputElementValue(nsIContent * 0x028ccc80, nsString * 0x00120c28 {""}, int 0) line 1328 + 19 bytes nsGfxTextControlFrame::GetText(nsGfxTextControlFrame * const 0x0116c3c0, nsString * 0x00120c28 {""}, int 0) line 760 + 20 bytes nsGfxTextControlFrame::Reflow(nsGfxTextControlFrame * const 0x0116c3c0, nsIPresContext * 0x0231cc10, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, unsigned int & 0) line 2114
Assignee: karnaze → kipp
Severity: minor → critical
I think this is a duplicate, but I'll leave it open for now because I'm not sure.
Target Milestone: M15
Whiteboard: ckritzer
mine! mine mine mine! all mine! whoo-hoo!
Assignee: kipp → buster
I spent some time on this problem. I contruct a simple HTML file to demonstrate the problem. it is: <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"> <HTML> <HEAD> <TITLE>TalkBack Form</TITLE> </HEAD> <BODY> <LAYER NAME="MainCol" TOP="0" WIDTH="468"> <TABLE BORDER="3" ALIGN="LEFT" WIDTH="468"> <TR> <TD> <TEXTAREA NAME="comment" ROWS=25 COLS=30 WRAP></TEXTAREA> </TD> </TR> </TABLE> </LAYER> </BODY> </HTML> The behavior clearly shows that it is a layout problem. TextArea widget has been placed outside the table. (Input Form has similar problem.) If either table or layer is removed, problem will disappear. Hope this will help somebody fix this problem.
moving all buster m15 bugs to m16.
Target Milestone: M15 → M16
troy, I think the view is just getting positioned incorrectly. You handled a bug like this recently, so reassigning to you. The bug does not have to do with layers necessarily. I am about to attach 2 test cases that are nearly identical. Niether involves layers. The first displays correctly. The second does not. The only difference between them is whether the table is wrapped in an <a> or a <fred>, where <fred> has "display: inline;" This might be related to inline-contains-block issues that nisheeth is looking at, so I cc'd him.
Assignee: buster → troy
Priority: P3 → P1
The last problem had nothing to do with me. It was a frame construction problem where the form frame wasn't indicating that it was a floater container...
Fixed ConstructFrameByDisplayType() (frame construction code) to make sure it passes in the correct parent frame pointer when constructing a floated table What was happening was the floated table ended up with the wrong parent pointer and that's why the child element's view was getting positioned incorrectly
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Marking VERIFIED FIXED on: - MacOS9 2000-07-06-08-M17 Commercial - Linux6 2000-07-09-20-M17 Commercial - Win98 2000-07-09-21-M17 Commercial
Status: RESOLVED → VERIFIED
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: