b=26221 Fixed ConstructFrameByDisplayType() to pass in the correct parent frame pointer when constructing a floated table